# whalevault

./: .gitignore  README.md
.serena/: project.yml
backend/: =0.34.0  Dockerfile  config.py  requirements.txt
backend/api/: deps.py
backend/middleware/: csrf.py
backend/models/: requests.py  responses.py
backend/proof_queue/: job_queue.py
backend/services/: jupiter_service.py  pool_service.py  raydium_service.py  relayer_service.py  veil_service.py
docs/architecture/: whalevault-technical-architecture.md
docs/context/: conversation_2026-01-26_2110.md  conversation_2026-01-27_0830.md  conversation_2026-01-27_1115.md  conversation_2026-01-27_1130.md  conversation_2026-01-27_1145.md  conversation_2026-01-27_1400.md  conversation_2026-01-27_1430.md  conversation_2026-01-27_1545.md  conversation_2026-01-27_1700.md  conversation_2026-01-27_1715.md  conversation_2026-01-27_1958.md  conversation_2026-01-27_2050.md  conversation_2026-01-28_0445.md  conversation_2026-01-28_0455.md  conversation_2026-01-28_0500.md  conversation_2026-01-28_0515.md  conversation_2026-01-28_0630.md  conversation_2026-01-28_0645.md  conversation_2026-01-28_0900.md  conversation_2026-01-28_0930.md  conversation_2026-01-28_1400.md  conversation_2026-01-28_1615.md  conversation_2026-01-28_1620.md  conversation_2026-01-28_1710.md  (+26 more)
frontend/: package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/lib/: api.ts  (+7 more)
scripts/: init_pools.py
veil/: Anchor.toml
veil/crates/program/: Cargo.toml
veil/crates/program/src/: instructions.rs  lib.rs  processor.rs  state.rs  token.rs
(+76 files in other folders)
